--- a/app/dashboard/templates/process_bounty.html
+++ b/app/dashboard/templates/process_bounty.html
@@ -83,6 +83,7 @@
                 </div>
                 <div>
                   Suggested Kudos
+                  <a href="{% url 'kudos_about' %}" target="_blank" style="float:right">What is kudos?</a>
                   <div id="kudos-holder"></div>
 
                 </div>
