add suggestions carousel

--- a/app/dashboard/templates/process_bounty.html
+++ b/app/dashboard/templates/process_bounty.html
@@ -22,6 +22,7 @@
     {% include 'shared/head.html' %}
     {% include 'shared/cards.html' %}
     <link rel="stylesheet" href="{% static "v2/css/select2-kudos.css" %}" />
+    <link rel="stylesheet" href="{% static "v2/css/scroll-carousel.css" %}" />
 
     <style>
       /* TODO: remove duplication of alert with same styles in bounties merge */
